@@ -4,6 +4,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
  - Add fixed mapping between moniker to packed files #64
  - Add EXPERIMENTAL support for "fallback_to_latest"
  - Add EXPERIMENTAL test_app() to ensure all assets are created
+ - Changed headers() into a method
  - Remove EXPERIMENTAL support for reloader.js
  - Remove support for in-memory assets #64
  - Fix memory leak
